resources/assets/less/app.less
/* ... */
.quote-container
{
  background: url('/images/static/head.png') #303968;
}

@media (max-width: 767px) {
  .grid.container
  {
    padding-left:0px !important;
  }
}

.facebookBtn,.twitterBtn,.googleBtn
{
  margin-right: 5px;
  margin-left: 5px;
}
.facebookBtn
{
  color: #EBEBEB;
}
.twitterBtn
{
  color: #3498DB;
}
.googleBtn
{
  color: #DF2416;
}

